# channel

./: CMakeLists.txt  LICENSE  README.md  build.sh  run_tests.sh
channel/: CMakeLists.txt
channel/include/sbe/: channel.h  static_queue.h
example/: CMakeLists.txt
example/src/: main.cpp
tests/: CMakeLists.txt  channel_tests.cpp
